--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,27 @@
 .project-container{
-    height: 300px;
+    height: 800px;
     background-color: #f7f7f7;
     padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-style: outset;
+    margin-bottom: 30px;
+}
+
+.project-container p {
+    font-size: 25px;
+    text-align: center;
+}
+
+.project-image {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    margin-top: 15px;
+}
+
+.nav-link {
+    color: white;
 }
