--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,22 @@
 .nav-link {
     color: white;
 }
+
+.home-page-intro-container {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 50%;
+    margin:auto;
+    align-items: center;
+    height: 400px;
+    margin-top: 20px;
+    background-color: #f7f7f7;
+    padding: 20px;
+}
+
+.home-page-intro-container p {
+    font-size: 25px;
+    text-align: center;
+    margin-top: 5px;
+    padding: 20px;
+}
